@@ -223,4 +223,5 @@ hivdr
   for suggesting to add the HTTP "Server" header
 
 hummel99
-  for helping to debug channel switch issues with priority > 0
+  for reporting and helping to debug channel switch issues with priority > 0
+  for reporting a race condition when switching the server's LiveTV device
